<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.practice.com.hskcihui.WordDetail">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textViewWordSimplified"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/wordDetailHanzi"
        android:text="@string/no_data"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordHskLevel"
        app:layout_constraintRight_toLeftOf="@+id/textViewWordTraditional"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textViewWordHskLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/listViewTextSize"
        android:text="@string/no_data"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/textViewWordTraditional"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/wordDetailHanzi"
        android:text="@string/no_data"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordHskLevel" />

    <TextView
        android:id="@+id/textViewWordPinyin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/wordDetailPinyin"
        android:text="@string/no_data"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordSimplified" />

    <TextView
        android:id="@+id/textViewWordEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/wordDetailEnglish"
        android:layout_marginTop="16dp"
        android:text="@string/no_data"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordPinyin" />

    <TextView
        android:id="@+id/textViewWordLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/wordDetailPinyin"
        android:text="@string/no_data"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordEnglish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonWordDifficulty0"
        android:layout_width="@dimen/wordDetailButtonSize"
        android:layout_height="@dimen/wordDetailButtonSize"
        android:text="@string/numberDifficulty0"
        android:textSize="@dimen/listViewTextSize"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordLevel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonWordDifficulty1"
        android:onClick="setLevel"/>

    <Button
        android:id="@+id/buttonWordDifficulty1"
        android:layout_width="@dimen/wordDetailButtonSize"
        android:layout_height="@dimen/wordDetailButtonSize"
        android:onClick="setLevel"
        android:text="@string/numberDifficulty1"
        android:textSize="@dimen/listViewTextSize"
        android:textColor="@color/red"
        app:layout_constraintLeft_toRightOf="@+id/buttonWordDifficulty0"
        app:layout_constraintRight_toLeftOf="@+id/buttonWordDifficulty2"
        app:layout_constraintTop_toTopOf="@+id/buttonWordDifficulty0" />

    <Button
        android:id="@+id/buttonWordDifficulty2"
        android:layout_width="@dimen/wordDetailButtonSize"
        android:layout_height="@dimen/wordDetailButtonSize"
        android:text="@string/numberDifficulty2"
        android:textSize="@dimen/listViewTextSize"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toTopOf="@+id/buttonWordDifficulty1"
        app:layout_constraintLeft_toRightOf="@+id/buttonWordDifficulty1"
        app:layout_constraintRight_toLeftOf="@+id/buttonWordDifficulty3"
        android:onClick="setLevel"/>

    <Button
        android:id="@+id/buttonWordDifficulty3"
        android:layout_width="@dimen/wordDetailButtonSize"
        android:layout_height="@dimen/wordDetailButtonSize"
        android:text="@string/numberDifficulty3"
        android:textSize="@dimen/listViewTextSize"
        android:textColor="@color/green"
        app:layout_constraintLeft_toRightOf="@+id/buttonWordDifficulty2"
        app:layout_constraintTop_toTopOf="@+id/buttonWordDifficulty2"
        app:layout_constraintRight_toLeftOf="@+id/buttonWordDifficulty4"
        android:onClick="setLevel"/>

    <Button
        android:id="@+id/buttonWordDifficulty4"
        android:layout_width="@dimen/wordDetailButtonSize"
        android:layout_height="@dimen/wordDetailButtonSize"
        android:text="@string/numberDifficulty4"
        android:textSize="@dimen/listViewTextSize"
        android:textColor="@color/cyan"
        app:layout_constraintLeft_toRightOf="@+id/buttonWordDifficulty3"
        app:layout_constraintTop_toTopOf="@+id/buttonWordDifficulty3"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="setLevel"/>
</android.support.constraint.ConstraintLayout>
